2009-09-11  Michael Matz  <matz@suse.de>

	PR middle-end/41275
	* g++.dg/tree-ssa/pr41275.C: New test.

2009-09-11  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41242
	* gfortran.dg/proc_ptr_comp_21.f90: New.

2009-09-10  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/31292
	* gfortran.dg/module_procedure_1.f90: New test.
	* gfortran.dg/module_procedure_2.f90: Ditto.
	* gfortran.dg/generic_14.f90: Move dg-error to new location.

2009-09-10  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
	    James A. Morrison  <phython@gcc.gnu.org>

	PR ada/18302
	* ada/acats/run_all.sh (target_run): Use run_test.exp to execute
	commands.
	* ada/acats/run_test.exp: New file.

2009-09-10  Uros Bizjak <ubizjak@gmail.com>

	Revert:
	2009-09-09  Uros Bizjak <ubizjak@gmail.com>

	PR rtl-optimization/39779
	* gcc.dg/pr39979.c: New test.

2009-09-10  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41257
	* g++.dg/torture/pr41257-2.C: New testcase.

2009-09-09  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/28293
	* g++.dg/template/crash91.C: New.

2009-09-09  Uros Bizjak <ubizjak@gmail.com>

	PR rtl-optimization/39779
	* gcc.dg/pr39979.c: New test.

2009-09-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/41101
	* gcc.c-torture/compile/pr41101.c: New testcase.

2009-09-09  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41317
	* gcc.c-torture/execute/pr41317.c: New testcase.
	* gcc.dg/tree-ssa/forwprop-11.c: XFAIL.
	* gcc.dg/tree-ssa/forwprop-12.c: Likewise.

2009-09-08  Dodji Seketeli  <dodji@redhat.com>

	Fix some test breakages on Darwin
	* g++.dg/debug/dwarf2/namespace-1.C: Use -fno-merge-debug-string
	and adjust.
	* g++.dg/debug/dwarf2/template-func-params-6.C: Likewise.
	* g++.dg/debug/dwarf2/template-func-params-7.C: Likewise.
	* g++.dg/debug/dwarf2/template-params-6.C: Likewise.
	* g++.dg/debug/dwarf2/pubnames-1.C: Likewise. Also, adjust to
	take darwin specifics in account.

2009-09-08  Joseph Myers  <joseph@codesourcery.com>
